[package]
name = "error-code"
version = "0.1.0"
edition = "2021"

[dependencies]

error-code-derive = { workspace = true }
base64 = "0.22.1"


[dev-dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
http = { workspace = true }
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
backtrace = "0.3.71"
